Refactor max hit handling to include NPC ID and improve data structure for max hits