@@ -9,9 +9,6 @@ import okhttp3.Response;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
-import java.io.IOException;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -22,43 +19,54 @@ import java.util.regex.Pattern;
 @Slf4j
 @Singleton
 public class WikiService {
-    private static final String WIKI_ID_API_URL = "https://oldschool.runescape.wiki/api.php?action=parse&curid=%d&prop=wikitext&format=json";
-    private static final String WIKI_NAME_API_URL = "https://oldschool.runescape.wiki/api.php?action=parse&page=%s&prop=wikitext&format=json";
-    private static final Pattern MAX_HIT_PATTERN = Pattern.compile("\\|\\s*max hit\\s*=\\s*([^\\n|]+)");
+    private static final String WIKI_API_URL = "https://oldschool.runescape.wiki/api.php?action=parse&format=json&prop=wikitext&page=";
+    private static final String WIKI_LOOKUP_URL = "https://oldschool.runescape.wiki/w/Special:Lookup?type=npc&id=%d&name=%s";
+    private static final Pattern VERSION_PATTERN = Pattern.compile("\\|\\s*version(\\d+)\\s*=\\s*([^\\n|]+)");
+    private static final Pattern MAX_HIT_PATTERN = Pattern.compile("\\|\\s*max hit(\\d*)\\s*=\\s*([^\\n|]+)");
     private static final Pattern MAX_HIT_VALUE_PATTERN = Pattern.compile("(\\d+)\\s*\\(([^)]+)\\)");
-    private static final Pattern VERSION_NAME_PATTERN = Pattern.compile("\\|version(\\d+)\\s*=\\s*([^\\n|]+)");
-    private static final Pattern VERSION_HIT_PATTERN = Pattern.compile("\\|\\s*max hit(\\d+)\\s*=\\s*([^\\n|]+)");
+
+    private final Map<Integer, OpponentMaxHitData> maxHitCache = new HashMap<>();
+    private final Map<Integer, String> npcNameCache = new HashMap<>();
 
     @Inject
     private OkHttpClient httpClient;
 
     @Inject
     private void init() {
-        // Configure OkHttpClient with timeout
         httpClient = new OkHttpClient.Builder()
             .connectTimeout(10, TimeUnit.SECONDS)
             .readTimeout(10, TimeUnit.SECONDS)
             .writeTimeout(10, TimeUnit.SECONDS)
+            .addInterceptor(chain -> chain.proceed(
+                chain.request().newBuilder()
+                    .header("User-Agent", "RuneLite opponent-max-hit plugin")
+                    .build()))
             .build();
     }
 
-    private final Map<String, OpponentMaxHitData> maxHitCache = new HashMap<>();
-
-    public Optional<OpponentMaxHitData> getMaxHitData(String monsterName) {
+    public Optional<OpponentMaxHitData> getMaxHitData(String monsterName, int npcId) {
         // Check cache first
-        if (maxHitCache.containsKey(monsterName)) {
-            return Optional.of(maxHitCache.get(monsterName));
+        if (maxHitCache.containsKey(npcId)) {
+            return Optional.of(maxHitCache.get(npcId));
         }
 
         try {
-            String encodedName = URLEncoder.encode(monsterName, StandardCharsets.UTF_8);
+            // First try to get the canonical page name
+            String pageName = getCanonicalName(monsterName, npcId);
+            if (pageName == null) {
+                return Optional.empty();
+            }
+
+            String encodedPage = java.net.URLEncoder.encode(pageName, "UTF-8");
+            String url = WIKI_API_URL + encodedPage;
+
             Request request = new Request.Builder()
-                    .url(String.format(WIKI_NAME_API_URL, encodedName))
+                    .url(url)
                     .build();
 
             try (Response response = httpClient.newCall(request).execute()) {
                 if (!response.isSuccessful() || response.body() == null) {
-                    log.debug("Failed to fetch wiki data for {}: {}", monsterName, response.code());
+                    log.debug("Failed to fetch wiki data for {} (ID: {}): {}", pageName, npcId, response.code());
                     return Optional.empty();
                 }
 
@@ -66,7 +74,7 @@ public class WikiService {
                 JsonObject jsonResponse = new Gson().fromJson(responseBody, JsonObject.class);
 
                 if (!jsonResponse.has("parse") || !jsonResponse.getAsJsonObject("parse").has("wikitext")) {
-                    log.debug("Invalid wiki response for {}", monsterName);
+                    log.debug("Invalid wiki response for {} (ID: {})", pageName, npcId);
                     return Optional.empty();
                 }
 
@@ -74,122 +82,150 @@ public class WikiService {
                         .getAsJsonObject("wikitext")
                         .get("*").getAsString();
 
-                OpponentMaxHitData data = parseMaxHits(wikitext, monsterName);
-                if (data != null) {
-                    maxHitCache.put(monsterName, data);
+                Map<String, Integer> maxHits = parseMaxHits(wikitext, npcId);
+                if (!maxHits.isEmpty()) {
+                    OpponentMaxHitData data = new OpponentMaxHitData(pageName, npcId, maxHits);
+                    maxHitCache.put(npcId, data);
                     return Optional.of(data);
                 }
             }
         } catch (Exception e) {
-            log.debug("Error fetching wiki data for {}: {}", monsterName, e.getMessage());
+            log.debug("Error fetching wiki data for {} (ID: {}): {}", monsterName, npcId, e.getMessage());
         }
         return Optional.empty();
     }
 
-    // move to separate WikiTextParser class or similar
-    private OpponentMaxHitData parseMaxHits(String wikitext, String monsterName) {
+    private String getCanonicalName(String monsterName, int npcId) {
+        if (npcNameCache.containsKey(npcId)) {
+            return npcNameCache.get(npcId);
+        }
+
+        try {
+            String lookupUrl = String.format(WIKI_LOOKUP_URL, npcId, 
+                java.net.URLEncoder.encode(monsterName, "UTF-8"));
+
+            Request request = new Request.Builder()
+                    .url(lookupUrl)
+                    .build();
+
+            try (Response response = httpClient.newCall(request).execute()) {
+                if (!response.isSuccessful()) {
+                    return null;
+                }
+
+                String finalUrl = response.request().url().toString();
+                // Extract the page name from the final URL
+                String pageName = finalUrl.substring(finalUrl.indexOf("/w/") + 3);
+                // URL decode the page name
+                pageName = java.net.URLDecoder.decode(pageName, "UTF-8");
+                
+                // If there's a section (indicated by #), include it
+                // This helps differentiate between different forms of the same NPC
+                npcNameCache.put(npcId, pageName);
+                return pageName;
+            }
+        } catch (Exception e) {
+            log.debug("Error getting canonical name for {} (ID: {}): {}", monsterName, npcId, e.getMessage());
+        }
+        return null;
+    }
+
+    private Map<String, Integer> parseMaxHits(String wikitext, int npcId) {
         Map<String, Integer> maxHits = new HashMap<>();
+        String versionName = null;
+        int versionNumber = -1;
 
-        // Extract version names
-        Matcher versionNameMatcher = VERSION_NAME_PATTERN.matcher(wikitext);
-        Map<String, String> versionNames = new HashMap<>();
-        while (versionNameMatcher.find()) {
-            versionNames.put(versionNameMatcher.group(1), versionNameMatcher.group(2).trim());
+        // Check if the cached page name contains a version (after #)
+        String pageName = npcNameCache.get(npcId);
+        if (pageName != null && pageName.contains("#")) {
+            versionName = pageName.substring(pageName.indexOf("#") + 1);
+            versionNumber = findVersionNumber(wikitext, versionName);
+            log.debug("Found version name: {} with number: {}", versionName, versionNumber);
         }
 
-        // Handle base max hit (unnumbered)
-        Matcher baseHitMatcher = MAX_HIT_PATTERN.matcher(wikitext);
-        if (baseHitMatcher.find()) {
-            String maxHitSection = baseHitMatcher.group(1).trim();
+        // Try to find version-specific max hit first
+        if (versionNumber > 0) {
+            String versionSpecificMaxHits = findMaxHitForVersion(wikitext, versionNumber);
+            log.debug("Found version-specific max hits: {}", versionSpecificMaxHits);
+            if (versionSpecificMaxHits != null) {
+                parseMaxHitValues(versionSpecificMaxHits, maxHits);
+                return maxHits;
+            }
+        }
 
-            if (maxHitSection.contains("<br")) {
-                // Handle break tag separated values as separate entries
-                String[] hits = maxHitSection.split("<br/?>");
-                for (String hit : hits) {
-                    hit = hit.trim();
-                    Matcher valueMatcher = MAX_HIT_VALUE_PATTERN.matcher(hit);
-                    if (valueMatcher.find()) {
-                        int value = Integer.parseInt(valueMatcher.group(1));
-                        String style = valueMatcher.group(2).trim();
-                        maxHits.put("Base (" + style + ")", value);
-                    } else {
-                        try {
-                            int value = Integer.parseInt(hit);
-                            maxHits.put("Base", value);
-                        } catch (NumberFormatException ignored) {
-                        }
-                    }
+        // Fall back to default max hit if no version-specific one found
+        String defaultMaxHits = findMaxHitForVersion(wikitext, 0);
+        log.debug("Found default max hits: {}", defaultMaxHits);
+        if (defaultMaxHits != null) {
+            parseMaxHitValues(defaultMaxHits, maxHits);
+        }
+
+        return maxHits;
+    }
+
+    private int findVersionNumber(String wikitext, String targetVersion) {
+        // Normalize target version by replacing underscores with spaces and cleaning
+        String normalizedTarget = targetVersion.replace('_', ' ').replaceAll("[()]", "").trim();
+        
+        Matcher versionMatcher = VERSION_PATTERN.matcher(wikitext);
+        while (versionMatcher.find()) {
+            int number = Integer.parseInt(versionMatcher.group(1));
+            String version = versionMatcher.group(2).trim();
+            
+            // Normalize version from wiki by cleaning
+            String normalizedVersion = version.replaceAll("[()]", "").trim();
+            
+            log.debug("Comparing versions - Target: '{}' vs Wiki: '{}' (number: {})", 
+                     normalizedTarget, normalizedVersion, number);
+                     
+            if (normalizedVersion.equalsIgnoreCase(normalizedTarget)) {
+                return number;
+            }
+        }
+        
+        // If exact match fails, try matching just the level number
+        if (normalizedTarget.startsWith("Level")) {
+            String targetLevel = normalizedTarget.substring("Level".length()).trim();
+            Matcher versionMatcher2 = VERSION_PATTERN.matcher(wikitext);
+            
+            while (versionMatcher2.find()) {
+                int number = Integer.parseInt(versionMatcher2.group(1));
+                String version = versionMatcher2.group(2).trim();
+                
+                if (version.contains(targetLevel)) {
+                    return number;
                 }
+            }
+        }
+        
+        return -1;
+    }
+
+    private String findMaxHitForVersion(String wikitext, int versionNumber) {
+        String versionSuffix = versionNumber > 0 ? String.valueOf(versionNumber) : "";
+        Pattern pattern = Pattern.compile("\\|\\s*max hit" + versionSuffix + "\\s*=\\s*([^\\n|]+)");
+        Matcher matcher = pattern.matcher(wikitext);
+        return matcher.find() ? matcher.group(1).trim() : null;
+    }
+
+    private void parseMaxHitValues(String maxHitSection, Map<String, Integer> maxHits) {
+        String[] hits = maxHitSection.split("(?:<br/?>|,)");
+        
+        for (String hit : hits) {
+            hit = hit.trim().replaceAll("<[^>]+>", "");
+            
+            Matcher valueMatcher = MAX_HIT_VALUE_PATTERN.matcher(hit);
+            if (valueMatcher.find()) {
+                int value = Integer.parseInt(valueMatcher.group(1));
+                String style = valueMatcher.group(2).trim();
+                maxHits.put(style, value);
             } else {
-                // Handle comma separated values, keeping only highest
-                String[] hits = maxHitSection.split(",");
-                int highestValue = 0;
-                String highestStyle = "";
-
-                for (String hit : hits) {
-                    hit = hit.trim();
-                    Matcher valueMatcher = MAX_HIT_VALUE_PATTERN.matcher(hit);
-                    if (valueMatcher.find()) {
-                        int value = Integer.parseInt(valueMatcher.group(1));
-                        String style = valueMatcher.group(2).trim();
-                        if (value > highestValue) {
-                            highestValue = value;
-                            highestStyle = style;
-                        }
-                    } else {
-                        try {
-                            int value = Integer.parseInt(hit);
-                            if (value > highestValue) {
-                                highestValue = value;
-                            }
-                        } catch (NumberFormatException ignored) {
-                        }
-                    }
-                }
-
-                String key = highestStyle.isEmpty() ? "Base" : "Base (" + highestStyle + ")";
-                maxHits.put(key, highestValue);
+                try {
+                    int value = Integer.parseInt(hit);
+                    maxHits.put("Max hit", value);
+                } catch (NumberFormatException ignored) {}
             }
         }
-
-        // Handle versioned max hits (unchanged)
-        Matcher versionHitMatcher = VERSION_HIT_PATTERN.matcher(wikitext);
-
-        while (versionHitMatcher.find()) {
-            String versionNumber = versionHitMatcher.group(1);
-            String maxHitSection = versionHitMatcher.group(2).trim();
-            String versionName = versionNames.getOrDefault(versionNumber, "Base");
-
-            // Split by commas and process each hit
-            String[] hits = maxHitSection.split(",");
-            int highestValue = 0;
-            String highestStyle = "";
-
-            for (String hit : hits) {
-                hit = hit.trim();
-                Matcher valueMatcher = MAX_HIT_VALUE_PATTERN.matcher(hit);
-                if (valueMatcher.find()) {
-                    int value = Integer.parseInt(valueMatcher.group(1));
-                    String style = valueMatcher.group(2).trim();
-                    if (value > highestValue) {
-                        highestValue = value;
-                        highestStyle = style;
-                    }
-                } else {
-                    try {
-                        int value = Integer.parseInt(hit);
-                        if (value > highestValue) {
-                            highestValue = value;
-                        }
-                    } catch (NumberFormatException ignored) {
-                    }
-                }
-            }
-
-            String key = highestStyle.isEmpty() ? versionName : versionName + " (" + highestStyle + ")";
-            maxHits.put(key, highestValue);
-        }
-
-        return maxHits.isEmpty() ? null : new OpponentMaxHitData(monsterName, maxHits);
     }
 }
+
